--- a/public/contact.html
+++ b/public/contact.html
@@ -8,6 +8,7 @@
 <body>
   <h1>Contact Me</h1>
   <p>Feel free to click <a href="mailto:sara.duniphin@gmail.com">here</a> to email me.</p>
+  <p><a href="../index.html">Home</a></p>
 </body>
 <footer>
   <p>© 2024 Sara Duniphin</p>
