Added home link to hobbies.html

--- a/public/hobbies.html
+++ b/public/hobbies.html
@@ -21,6 +21,7 @@
     <li>Painting</li>
     <li>Game Development</li>
   </ul>
+  <p><a href="../index.html">Home</a></p>
 </body>
 <footer>
   <p>© 2024 Sara Duniphin</p>
